// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table row 1`] = `
<tr
  className="row"
  role="row"
/>
`;

exports[`should render a selectable table row 1`] = `
<tr
  aria-selected={false}
  className="is-selectable row"
  data-row-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="row"
  tabIndex="0"
/>
`;

exports[`should render a selected table row 1`] = `
<tr
  aria-selected={true}
  className="is-selected is-selectable row"
  data-row-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="row"
  tabIndex="0"
/>
`;

exports[`should render a striped table row 1`] = `
<tr
  className="is-striped row"
  role="row"
/>
`;

exports[`should render a table row with a cell 1`] = `
<tr
  className="row"
  role="row"
>
  <TableCell />
</tr>
`;

exports[`should render a table row with onSelect 1`] = `
<tr
  aria-selected={false}
  className="is-selectable row"
  data-row-show-focus="true"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="row"
  tabIndex="0"
/>
`;

exports[`should render a table row with refCallback 1`] = `
<tr
  className="row"
  role="row"
/>
`;
